--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ imutils == 0.5.4
 numpy == 1.18.2
 opencv_python == 4.5.5.64
 opencv-contrib-python == 4.5.5.64
+opencv-contrib-python-headless == 4.5.5.64
+opencv-python-headless == 4.5.5.64
 scikit_image == 0.19.2
 scipy == 1.4.1
 streamlit == 1.8.1
