--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-ImageHash == 4.2.1
-Pillow == 9.0.1
-imutils == 0.5.4
-numpy == 1.18.2
 opencv-contrib-python-headless == 4.5.5.64
 opencv-python-headless == 4.5.5.64
+ImageHash == 4.2.1
+Pillow == 9.0.1
+efficientnet-pytorch == 0.7.1
+imutils == 0.5.4
+numpy == 1.21.6
 scikit_image == 0.19.2
 scipy == 1.4.1
 streamlit == 1.8.1
+torch == 1.11.0
+torchvision == 0.12.0
